--- a/slides/15-gam/gam.Rmd
+++ b/slides/15-gam/gam.Rmd
@@ -33,7 +33,7 @@ For $p$ larger than two or three, it becomes impractical to fit such models due 
 $$
 y = \beta_0 + \sum_{j=1}^p f_j(x_j) + \epsilon,
 $$
-where $f_j$ are smooth arbitrary functions. Interaction terms are ignored. To incorporate categorical predictors, we can use the model
+where $f_j$ are smooth functions. Interaction terms are ignored. To incorporate categorical predictors, we can use the model
 $$
 y = \beta_0 + \sum_{j=1}^p f_j(x_j) + \mathbf{z}^T \boldsymbol{\gamma} + \epsilon,
 $$
@@ -43,7 +43,7 @@ where $\mathbf{z}$ are categorical predictors.
 
 - `gam` package uses a **backfitting algorithm** for fitting the additive models.
 
-    1. Initialize $\beta_0, \beta_1, \ldots, \beta_p$ say from the least squares fit.  
+    1. Initialize $\beta_0 = \bar y$, $f_j(x_j) = \hat \beta_j x_j$ say from the least squares fit.  
     
     2. Cycle throught $j=1,\ldots,p, 1,\ldots,p,\ldots$
     $$
@@ -57,7 +57,7 @@ where $\mathbf{z}$ are categorical predictors.
 $$
 f_j(x) = \sum_i \beta_i \phi_i(x)
 $$
-for a family of spline basis function, $\phi_i$. The roughness penalty $\int [f_j''(x)]^2 \, dx$ translates to the term $\boldsymbol{\beta}_j^T \mathbf{S}_j \boldsymbol{\beta}_j$ for a suitable $\mathbf{S}_j$ that depends on the choice of basis. It then maximizes the penalized log-likelihood
+for a family of spline basis functions, $\phi_i$. The roughness penalty $\int [f_j''(x)]^2 \, dx$ translates to the term $\boldsymbol{\beta}_j^T \mathbf{S}_j \boldsymbol{\beta}_j$ for a suitable $\mathbf{S}_j$ that depends on the choice of basis. It then maximizes the penalized log-likelihood
 $$
 \log L(\boldsymbol{\beta}) - \sum_j \lambda_j \boldsymbol{\beta}_j^T \mathbf{S}_j \boldsymbol{\beta}_j,
 $$
@@ -70,6 +70,11 @@ where $\lambda_j$ control the amount of smoothing for each variable. Generalized
 ```{r}
 ozone <- as_tibble(ozone) %>% print()
 ```    
+
+- Numerical summary.
+```{r}
+summary(ozone)
+```
 
 - Graphical summary. 
 ```{r}
@@ -99,14 +104,15 @@ olm <- lm(O3 ~ temp + ibh + ibt, data = ozone)
 summary(olm)
 ```
 
-- Effects of predictors. 
 
-```{r}
-library(effects)
-plot(Effect("temp", olm, partial.residuals = TRUE))
-plot(Effect("ibh",  olm, partial.residuals = TRUE))
-plot(Effect("ibt",  olm, partial.residuals = TRUE))
-```
+<!-- - Effects of predictors.  -->
+
+<!-- ```{r} -->
+<!-- library(effects) -->
+<!-- plot(Effect("temp", olm, partial.residuals = TRUE)) -->
+<!-- plot(Effect("ibh",  olm, partial.residuals = TRUE)) -->
+<!-- plot(Effect("ibt",  olm, partial.residuals = TRUE)) -->
+<!-- ``` -->
 
 - Additive model using `mgcv`.
 
@@ -127,25 +133,28 @@ plot(ammgcv, residuals = TRUE, select = 2)
 plot(ammgcv, residuals = TRUE, select = 3)
 ```
 
+- `ibt` is not significant after adjusting for the effects of `temp` and `ibh`, so we drop it in following analysis.
+
 - We can test the significance of the nonlinearity of a predictor by F test.
 
 ```{r}
 am1 <- gam(O3 ~ s(temp) + s(ibh), data = ozone)
-am2 <- gam(O3 ~ temp + s(ibh), data = ozone)
+am2 <- gam(O3 ~    temp + s(ibh), data = ozone)
 anova(am2, am1, test = "F")
 ```
 
 - We can include functions of two variables with `mgcv` to incorporate interactions. In the *isotropic* case (same scale), we can impose same smoothing on both variables. In the *anisotropic* case (different scales), we use tensor product to allow different smoothings.
 
 ```{r}
-amint <- gam(O3 ~ te(temp, ibh) + s(ibt), data = ozone)
+# te(x1, x2) play the role x1 * x2 in regular lm/glm
+amint <- gam(O3 ~ te(temp, ibh), data = ozone)
 summary(amint)
 ```
 
 - We can test the significance of the interactions using F test.
 
 ```{r}
-anova(ammgcv, amint, test = "F")
+anova(am1, amint, test = "F")
 ```
 
 - We can visualize the interactions
@@ -158,11 +167,11 @@ vis.gam(amint, theta = -45, color = "gray")
 - GAM can be used for prediction.
 
 ```{r}
-predict(ammgcv, data.frame(temp = 60, ibh = 2000, ibt = 100), se = T)
+predict(am1, data.frame(temp = 60, ibh = 2000, ibt = 100), se = T)
 ```
 ```{r}
 # extrapolation
-predict(ammgcv, data.frame(temp = 120, ibh = 2000, ibt = 100), se = T)
+predict(am1, data.frame(temp = 120, ibh = 2000, ibt = 100), se = T)
 ```
 
 ### Generalized additive model
@@ -192,7 +201,11 @@ plot(gammgcv, residuals = TRUE, select = 3)
 - Let's re-analyze the `eplepsy` data from the GLMM chapter. 
 
 ```{r}
-egamm <- gamm(seizures ~ offset(timeadj) + treat * expind + s(age), family = poisson, random = list(id = ~1), data = epilepsy,  subset= (id != 49))
+egamm <- gamm(seizures ~ offset(timeadj) + treat * expind + s(age), 
+              family   = poisson, 
+              random   = list(id = ~1), 
+              data     = epilepsy,  
+              subset   = (id != 49))
 summary(egamm$gam)
 ```
 
