--- a/_posts/2020-06-02-week10-day1.md
+++ b/_posts/2020-06-02-week10-day1.md
@@ -14,20 +14,20 @@ category: biostat200Cspring2020
 
     * ANOVA and REML estimate. Unbiased.
     $$
-    \hat \sigma_\epsilon^2 = \frac{\text{SSE}}{a(n-1)}
+    \hat{\sigma}_\epsilon^2 = \frac{\text{SSE}}{a(n-1)}
     $$
     $$
-    \hat \sigma_\alpha^2 = \frac{\text{SSA}}{(a - 1)n} - \frac{\text{SSE}}{an(n - 1)}
+    \hat{\sigma}_\alpha^2 = \frac{\text{SSA}}{(a - 1)n} - \frac{\text{SSE}}{an(n - 1)}
     $$
     
-    * MLE. $\hat \sigma_\alpha^2$ is biased but might have a smaller MSE than ANOVA/REML estimate.
+    * MLE. $\hat{\sigma}_\alpha^2$ is biased but might have a smaller MSE than ANOVA/REML estimate.
     $$
-    \hat \sigma_\epsilon^2 = \frac{\text{SSE}}{a(n-1)}
+    \hat{\sigma}_\epsilon^2 = \frac{\text{SSE}}{a(n-1)}
     $$
     $$
-    \hat \sigma_\alpha^2 = \frac{\text{SSA}}{an} - \frac{\text{SSE}}{an(n - 1)}
+    \hat{\sigma}_\alpha^2 = \frac{\text{SSA}}{an} - \frac{\text{SSE}}{an(n - 1)}
     $$
 
-    * Analog to the linear regression model $Y \sim N(X \beta, \sigma_^2 I)$. Unbiased estimate of $\sigma^2$ is $\text{SSE} / (n - p)$. MLE is $\text{SSE} / n$. Best quadratic invariant estimator is $\text{SSE} / (n - p + 2)$.
+    * Analog to the linear regression model $Y \sim N(X \beta, \sigma^2 I)$. Unbiased estimate of $\sigma^2$ is $\text{SSE} / (n - p)$. MLE is $\text{SSE} / n$. Best quadratic invariant estimator is $\text{SSE} / (n - p + 2)$.
     
 * Course evaluation: <https://my.ucla.edu>
