--- a/_posts/2020-06-02-week10-day1.md
+++ b/_posts/2020-06-02-week10-day1.md
@@ -10,6 +10,8 @@ category: biostat200Cspring2020
 
 ## Announcement
 
+* I'll post final (take home) by this Thursday 6/4. Due next Tue 6/9 @ 11:59pm.
+
 * HW4 Q2 summary. Balanced one-way ANOVA random effects model. 
 
     * ANOVA and REML estimate. Unbiased.
