--- a/_posts/2020-06-04-week10-day2.md
+++ b/_posts/2020-06-04-week10-day2.md
@@ -8,10 +8,12 @@ category: biostat200Cspring2020
 
 * GAM (ELMR 15).
 
+* 11am: A Moment of Silence and Reflection to honor the memory of George Floyd and other victims.
+
+* Course evaluation: <https://my.ucla.edu> (if you havn't done so).
+
 ## Announcement
 
-* Take home final is sent via CCLE. Due next Tue 6/9 @ 11:59pm.
-    
-* Course evaluation: <https://my.ucla.edu>
+* Take home final is sent via CCLE. Due next Tue 6/9 @ 11:59pm. If you are having trouble finishing it due to current social unrest and COVID-19 pandemic, please feel free to reach out to me. I'm happy to make accomodations. 
 
 * Course summary: GLM, survival data, mixed model (longitudinal data and repeated measures), nonparametrics. Follow up courses. 
